# glyph-animator

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.claude/: CLAUDE.md
.claude/proposals/ACTIVE/: P1-20260315-003-styles-generators.md
.claude/proposals/BACKLOG/: P1-20260315-001-foundation.md  P1-20260315-002-lottie-layer.md  P1-20260315-003-styles-generators.md  P2-20260315-004-viewer.md
.claude/proposals/COMPLETE/: P1-20260315-001-foundation.md
.claude/proposals/STAGED/: P1-20260315-002-lottie-layer.md
docs/: LOTTIE_REFERENCE.md  REFERENCES.md  constants.md
docs/proofs/: 01_bezier_evaluation.md  02_arc_length_quadrature.md  03_de_casteljau_subdivision.md  04_point_normalization.md  04a_least_squares_fitting.md  05_contour_matching.md  06_starting_point_alignment.md  07_path_interpolation.md  08_vogel_phyllotaxis.md  08a_angular_sort_assignment.md  10_affine_transform.md
scripts/: build_viewer.py  generate_digit_outline.py  generate_morph_lottie.py  render_shapes.py  verify_pipeline.py
src/glyph_animator/: __init__.py  constants.py
src/glyph_animator/algorithms/: __init__.py  alignment.py  arc_length.py  base.py  conversion.py  curves.py  growth.py  lsystem.py  matching.py  morphing.py  resampling.py  shapes.py  spatial.py  (+2 more)
tests/: conftest.py  test_arc_length.py  test_constraints.py  test_conversion.py  test_curves.py  test_growth.py  test_lottie_builder.py  test_lottie_easing.py  test_lottie_paths.py  test_matching.py  test_pipeline.py  test_renderer.py  test_resampling.py  test_shapes.py  test_smoke.py  test_spatial.py  test_styles.py
(+28 files in other folders)
